# tecarius

./: Cargo.toml
src/: config.rs  error.rs  keyboard.rs  lib.rs  main.rs  pacman.rs  utils.rs
src/app/: mod.rs  sync.rs  tabs.rs
themes/: catppuccin-frappe.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  gruvbox.toml
