[package]
name = "tecarius"
version = "0.1.0"
edition = "2024"
authors = ["H Bacelar"]
description = "A TUI application for managing Arch packages."
documentation = "https://docs.rs/ratatui/latest/tecarius"
readme = "README.md"
repository = "https://github.com/hbacelar8/tecarius"
license = "MIT"
keywords = ["arch", "pacman", "tui", "packages"]
categories = ["command-line-utilities"]

[dependencies]
alpm = "4.0.3"
pacmanconf = "3.0.0"
chrono = "0.4.41"
crossterm = { version = "0.29.0", features = ["event-stream", "events"] }
ratatui = "0.29.0"
thiserror = "2"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
tui-input = { version = "0.14.0", default-features = false, features = [
  "crossterm",
] }
fuzzy-matcher = "0.3.7"
cross-xdg = "2.0.0"
nix = { version = "0.30.1", features = ["user"] }
tokio = { version = "1.47.0", features = ["sync", "rt-multi-thread", "macros"] }
futures = "0.3.31"

[profile.release]
lto = true
panic = "abort"
